force-app/main/default/objects/Case_Resource__c/Case_Resource__c.object-meta.xml
<CustomObject>
    <label>Case Resource</label>
    <nameField>
        <displayFormat>CR-{00000}</displayFormat>
        <label>Case Resource Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Resources</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>