force-app/main/default/objects/Case_Resource__c/fields/Case_Resource__c.field-meta.xml
<CustomField>
    <fullName>Case_Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The name of the resource</description>
    <label>Case Resource</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Case_Resources</relationshipName>
    <type>Lookup</type>
</CustomField>