force-app/main/default/objects/Case_Resource__c/fields/Resource_Level_of_Effort__c.field-meta.xml
<CustomField>
    <fullName>Resource_Level_of_Effort__c</fullName>
    <description>LOE required for the resource on the change request</description>
    <label>Resource Level of Effort</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>