force-app/main/default/objects/Case_Resource__c/fields/Resource_Status__c.field-meta.xml
<CustomField>
    <fullName>Resource_Status__c</fullName>
    <description>Resource Status identifies progress for each Case Resource on a case.</description>
    <label>Resource Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Pending QA</fullName>
            </value>
            <value>
                <fullName>Pending UAT Testing</fullName>
            </value>
            <value>
                <fullName>Completed - Pending PROD Release</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>