force-app/main/default/objects/Case_Resource__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <description>The role that the resource is taking on for the change request</description>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Architect</fullName>
            </value>
            <value>
                <fullName>Consultant</fullName>
            </value>
            <value>
                <fullName>Developer</fullName>
            </value>
            <value>
                <fullName>Project Manager</fullName>
            </value>
            <value>
                <fullName>QA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>