force-app/main/default/objects/Case_Resource__c/fields/Task_Details__c.field-meta.xml
<CustomField>
    <fullName>Task_Details__c</fullName>
    <description>Expectations of the resource</description>
    <label>Task Details</label>
    <type>TextArea</type>
</CustomField>